// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Buttons/ToggleButtonGroup ToggleButtonGroup 1`] = `
.c5 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
}

.c2 {
  color: #666666;
  border: unset;
  padding: 4px;
}

.c2.RcToggleButton-selected {
  color: #066FAC;
}

.c2.RcToggleButton-disabled {
  color: #939393;
}

.c2 .RcToggleButton-label {
  position: relative;
  font-size: 20px;
}

.c2.focus-visible:after,
.c2[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 2px;
  pointer-events: none;
}

.c2:active {
  background-color: rgba(102,102,102,0.12);
}

.c2.RcToggleButton-selected,
.c2.RcToggleButton-selected:hover {
  background-color: rgba(6,111,172,0.12);
}

.c6 {
  color: #666666;
  border: unset;
  padding: 4px;
}

.c6.RcToggleButton-selected {
  color: #066FAC;
}

.c6.RcToggleButton-disabled {
  color: #939393;
}

.c6 .RcToggleButton-label {
  position: relative;
  font-size: 20px;
}

.c6.focus-visible:after,
.c6[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 2px;
  pointer-events: none;
}

.c6:active {
  background-color: rgba(102,102,102,0.12);
}

.c0 .RcToggleButtonGroup-groupedHorizontal + .RcToggleButtonGroup-groupedHorizontal .c3:before,
.c0 .RcToggleButtonGroup-groupedVertical + .RcToggleButtonGroup-groupedVertical .c3:before {
  content: '';
  position: absolute;
  pointer-events: none;
  background: #E5E5E5;
  top: 0;
  left: 0;
  height: 100%;
  width: 1px;
  -webkit-transform: translateX(-9px);
  -ms-transform: translateX(-9px);
  transform: translateX(-9px);
}

.c0 .c1.RcToggleButton-selected + .c1.RcToggleButton-selected,
.c0 .RcToggleButtonGroup-groupedHorizontal,
.c0 .RcToggleButtonGroup-groupedVertical {
  margin: 4px 4px 4px 5px;
  padding: 4px;
  border: none;
  border-radius: 2px;
  margin-top: 0;
  margin-bottom: 0;
}

.c0 .c1.RcToggleButton-selected + .c1.RcToggleButton-selected:first-child,
.c0 .RcToggleButtonGroup-groupedHorizontal:first-child,
.c0 .RcToggleButtonGroup-groupedVertical:first-child {
  margin-left: 8px;
}

.c0 .c1.RcToggleButton-selected + .c1.RcToggleButton-selected:last-child,
.c0 .RcToggleButtonGroup-groupedHorizontal:last-child,
.c0 .RcToggleButtonGroup-groupedVertical:last-child {
  margin-right: 8px;
}

@media (hover:hover) and (pointer:fine) {
  .c2:hover {
    color: #121212;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2:hover {
    background-color: rgba(102,102,102,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c6:hover {
    color: #121212;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c6:hover {
    background-color: rgba(102,102,102,0.08);
  }
}

<div
  aria-label="text alignment"
  className="MuiToggleButtonGroup-root c0"
  role="group"
>
  <button
    aria-label="left aligned"
    aria-pressed={true}
    className="MuiButtonBase-root MuiToggleButton-root c1 c2 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal Mui-selected RcToggleButton-selected"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="left"
  >
    <span
      className="MuiToggleButton-label RcToggleButton-label"
    >
      <span
        className="c3 c4 align-left icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
          />
        </svg>
        
      </span>
    </span>
  </button>
  <button
    aria-label="centered"
    aria-pressed={false}
    className="MuiButtonBase-root MuiToggleButton-root c1 c2 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="center"
  >
    <span
      className="MuiToggleButton-label RcToggleButton-label"
    >
      <span
        className="c3 c4 align-center icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
          />
        </svg>
        
      </span>
    </span>
  </button>
  <button
    aria-label="right aligned"
    aria-pressed={false}
    className="MuiButtonBase-root MuiToggleButton-root c1 c6 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal Mui-disabled RcToggleButton-disabled Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
    value="right"
  >
    <span
      className="MuiToggleButton-label RcToggleButton-label"
    >
      <span
        className="c3 c4 align-right icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
          />
        </svg>
        
      </span>
    </span>
  </button>
  <button
    aria-label="justified"
    aria-pressed={false}
    className="MuiButtonBase-root MuiToggleButton-root c1 c2 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="justify"
  >
    <span
      className="MuiToggleButton-label RcToggleButton-label"
    >
      <span
        className="c3 c4 align-justify icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
          />
        </svg>
        
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots 🚀 Cleanup Components/Buttons/ToggleButtonGroup ToggleButtonGroup Examples 1`] = `
.c7 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
}

.c4 {
  color: #666666;
  border: unset;
  padding: 4px;
}

.c4.RcToggleButton-selected {
  color: #066FAC;
}

.c4.RcToggleButton-disabled {
  color: #939393;
}

.c4 .RcToggleButton-label {
  position: relative;
  font-size: 20px;
}

.c4.focus-visible:after,
.c4[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 2px;
  pointer-events: none;
}

.c4:active {
  background-color: rgba(102,102,102,0.12);
}

.c4.RcToggleButton-selected,
.c4.RcToggleButton-selected:hover {
  background-color: rgba(6,111,172,0.12);
}

.c9 {
  color: #666666;
  border: unset;
  padding: 4px;
}

.c9.RcToggleButton-selected {
  color: #066FAC;
}

.c9.RcToggleButton-disabled {
  color: #939393;
}

.c9 .RcToggleButton-label {
  position: relative;
  font-size: 20px;
}

.c9.RcToggleButton-selected {
  background-color: unset;
}

.c9.focus-visible .RcToggleButton-label:after,
.c9[data-focus-visible-added] .RcToggleButton-label:after {
  content: '';
  position: absolute;
  top: -3px;
  right: -3px;
  bottom: -3px;
  left: -3px;
  box-shadow: 0 0 0 2px #066FAC;
  border-radius: 2px;
  pointer-events: none;
  z-index: 1;
}

.c2 .RcToggleButtonGroup-groupedHorizontal + .RcToggleButtonGroup-groupedHorizontal .c5:before,
.c2 .RcToggleButtonGroup-groupedVertical + .RcToggleButtonGroup-groupedVertical .c5:before {
  content: '';
  position: absolute;
  pointer-events: none;
  background: #E5E5E5;
  top: 0;
  left: 0;
  height: 100%;
  width: 1px;
  -webkit-transform: translateX(-9px);
  -ms-transform: translateX(-9px);
  transform: translateX(-9px);
}

.c2 .c3.RcToggleButton-selected + .c3.RcToggleButton-selected,
.c2 .RcToggleButtonGroup-groupedHorizontal,
.c2 .RcToggleButtonGroup-groupedVertical {
  margin: 4px 4px 4px 5px;
  padding: 4px;
  border: none;
  border-radius: 2px;
  margin-top: 0;
  margin-bottom: 0;
}

.c2 .c3.RcToggleButton-selected + .c3.RcToggleButton-selected:first-child,
.c2 .RcToggleButtonGroup-groupedHorizontal:first-child,
.c2 .RcToggleButtonGroup-groupedVertical:first-child {
  margin-left: 8px;
}

.c2 .c3.RcToggleButton-selected + .c3.RcToggleButton-selected:last-child,
.c2 .RcToggleButtonGroup-groupedHorizontal:last-child,
.c2 .RcToggleButtonGroup-groupedVertical:last-child {
  margin-right: 8px;
}

.c8 {
  background-color: #FFFFFF;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  border-radius: 100vw;
}

.c8 .RcToggleButtonGroup-groupedHorizontal + .RcToggleButtonGroup-groupedHorizontal .c5:before,
.c8 .RcToggleButtonGroup-groupedVertical + .RcToggleButtonGroup-groupedVertical .c5:before {
  content: '';
  position: absolute;
  pointer-events: none;
  background: #E5E5E5;
  top: 0;
  left: 0;
  height: 100%;
  width: 1px;
  -webkit-transform: translateX(-9px);
  -ms-transform: translateX(-9px);
  transform: translateX(-9px);
}

.c8 .c3 {
  padding-left: 7px;
  margin-left: 1px;
  padding-right: 8px;
}

.c8 .c3:first-child {
  border-top-left-radius: 100vw;
  border-bottom-left-radius: 100vw;
  padding-left: 12px;
  margin-left: 0px;
}

.c8 .c3:last-child {
  border-top-right-radius: 100vw;
  border-bottom-right-radius: 100vw;
  padding-right: 12px;
}

.c10 .RcToggleButtonGroup-groupedHorizontal + .RcToggleButtonGroup-groupedHorizontal .c5:before,
.c10 .RcToggleButtonGroup-groupedVertical + .RcToggleButtonGroup-groupedVertical .c5:before {
  content: '';
  position: absolute;
  pointer-events: none;
  background: #E5E5E5;
  top: 0;
  left: 0;
  height: 1px;
  width: 100%;
  -webkit-transform: translateY(-9px);
  -ms-transform: translateY(-9px);
  transform: translateY(-9px);
}

.c10 .c3.RcToggleButton-selected + .c3.RcToggleButton-selected,
.c10 .RcToggleButtonGroup-groupedHorizontal,
.c10 .RcToggleButtonGroup-groupedVertical {
  margin: 4px 4px 5px 4px;
  padding: 4px;
  border: none;
  border-radius: 2px;
  margin-left: 0;
  margin-right: 0;
}

.c10 .c3.RcToggleButton-selected + .c3.RcToggleButton-selected:first-child,
.c10 .RcToggleButtonGroup-groupedHorizontal:first-child,
.c10 .RcToggleButtonGroup-groupedVertical:first-child {
  margin-top: 8px;
}

.c10 .c3.RcToggleButton-selected + .c3.RcToggleButton-selected:last-child,
.c10 .RcToggleButtonGroup-groupedHorizontal:last-child,
.c10 .RcToggleButtonGroup-groupedVertical:last-child {
  margin-bottom: 8px;
}

.c11 {
  background-color: #FFFFFF;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  border-radius: 100vw;
}

.c11 .RcToggleButtonGroup-groupedHorizontal + .RcToggleButtonGroup-groupedHorizontal .c5:before,
.c11 .RcToggleButtonGroup-groupedVertical + .RcToggleButtonGroup-groupedVertical .c5:before {
  content: '';
  position: absolute;
  pointer-events: none;
  background: #E5E5E5;
  top: 0;
  left: 0;
  height: 1px;
  width: 100%;
  -webkit-transform: translateY(-9px);
  -ms-transform: translateY(-9px);
  transform: translateY(-9px);
}

.c11 .c3 {
  padding-top: 7px;
  margin-top: 1px;
  padding-bottom: 8px;
}

.c11 .c3:first-child {
  border-top-left-radius: 100vw;
  border-top-right-radius: 100vw;
  padding-top: 12px;
  margin-top: 0px;
}

.c11 .c3:last-child {
  border-bottom-left-radius: 100vw;
  border-bottom-right-radius: 100vw;
  padding-bottom: 12px;
}

.c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 28px;
  color: #121212;
}

@media (hover:hover) and (pointer:fine) {
  .c4:hover {
    color: #121212;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4:hover {
    background-color: rgba(102,102,102,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c9:hover {
    color: #121212;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c9:hover,
  .c9.RcToggleButton-selected:hover {
    background-color: unset;
  }
}

<div
  className="MuiGrid-root MuiGrid-container"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Exclusive selection
      </h5>
      <h6
        className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="title1"
      >
        Standard
      </h6>
      <div
        aria-label="text alignment"
        className="MuiToggleButtonGroup-root c2"
        role="group"
      >
        <button
          aria-describedby={null}
          aria-label="left aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="left aligned"
          type="button"
          value="left"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-left icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="centered"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="centered"
          type="button"
          value="center"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-center icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="right aligned"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="right aligned"
          type="button"
          value="right"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-right icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="justified"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="justified"
          type="button"
          value="justify"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-justify icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
      </div>
      <h6
        className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="title1"
      >
        Box
      </h6>
      <div
        aria-label="text alignment"
        className="MuiToggleButtonGroup-root c8"
        role="group"
      >
        <button
          aria-describedby={null}
          aria-label="left aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="left aligned"
          type="button"
          value="left"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-left icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="centered"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="centered"
          type="button"
          value="center"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-center icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="right aligned"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="right aligned"
          type="button"
          value="right"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-right icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="justified"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="justified"
          type="button"
          value="justify"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-justify icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Multiple selection
      </h5>
      <h6
        className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="title1"
      >
        Standard
      </h6>
      <div
        aria-label="text alignment"
        className="MuiToggleButtonGroup-root c2"
        role="group"
      >
        <button
          aria-label="left aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="left"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-left icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="centered"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="center"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-center icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="right aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="right"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-right icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="justified"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="justify"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-justify icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
      </div>
      <br />
      <br />
      <h6
        className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="title1"
      >
        Box
      </h6>
      <div
        aria-label="text alignment"
        className="MuiToggleButtonGroup-root c8"
        role="group"
      >
        <button
          aria-label="left aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="left"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-left icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="centered"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="center"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-center icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="right aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="right"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-right icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="justified"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal RcToggleButtonGroup-groupedHorizontal"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="justify"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-justify icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
      </div>
      <br />
      <br />
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Exclusive selection
      </h5>
      <h6
        className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="title1"
      >
        Standard
      </h6>
      <div
        aria-label="text alignment"
        className="MuiToggleButtonGroup-root c10 MuiToggleButtonGroup-vertical"
        role="group"
      >
        <button
          aria-describedby={null}
          aria-label="left aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="left aligned"
          type="button"
          value="left"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-left icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="centered"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="centered"
          type="button"
          value="center"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-center icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="right aligned"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="right aligned"
          type="button"
          value="right"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-right icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="justified"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="justified"
          type="button"
          value="justify"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-justify icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
      </div>
      <h6
        className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="title1"
      >
        Box
      </h6>
      <div
        aria-label="text alignment"
        className="MuiToggleButtonGroup-root c11 MuiToggleButtonGroup-vertical"
        role="group"
      >
        <button
          aria-describedby={null}
          aria-label="left aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="left aligned"
          type="button"
          value="left"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-left icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="centered"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="centered"
          type="button"
          value="center"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-center icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="right aligned"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="right aligned"
          type="button"
          value="right"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-right icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-describedby={null}
          aria-label="justified"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="justified"
          type="button"
          value="justify"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-justify icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Multiple selection
      </h5>
      <h6
        className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="title1"
      >
        Standard
      </h6>
      <div
        aria-label="text alignment"
        className="MuiToggleButtonGroup-root c10 MuiToggleButtonGroup-vertical"
        role="group"
      >
        <button
          aria-label="left aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="left"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-left icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="centered"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="center"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-center icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="right aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="right"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-right icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="justified"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c4 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="justify"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-justify icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
      </div>
      <br />
      <br />
      <h6
        className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="title1"
      >
        Box
      </h6>
      <div
        aria-label="text alignment"
        className="MuiToggleButtonGroup-root c11 MuiToggleButtonGroup-vertical"
        role="group"
      >
        <button
          aria-label="left aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="left"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-left icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h14zm8-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="centered"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="center"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-center icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm-4-9a1 1 0 0 1 0 2H9a1 1 0 0 1 0-2h14zm4-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="right aligned"
          aria-pressed={true}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical Mui-selected RcToggleButton-selected"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="right"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-right icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H13a1 1 0 0 1 0-2h14zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
        <button
          aria-label="justified"
          aria-pressed={false}
          className="MuiButtonBase-root MuiToggleButton-root c3 c9 MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical RcToggleButtonGroup-groupedVertical"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
          value="justify"
        >
          <span
            className="MuiToggleButton-label RcToggleButton-label"
          >
            <span
              className="c5 c6 align-justify icon"
            >
              <svg
                className="c7"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M27 24a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22zm0-9a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2h22z"
                />
              </svg>
              
            </span>
          </span>
        </button>
      </div>
      <br />
      <br />
    </div>
  </div>
</div>
`;
